Revision history for Const::Exporter

v0.2.1  2014-06-04
        [Documentation]
         - Corrected typos in POD.

         - Added requirements to README.

         - Reformatted Changes.

v0.2.0   2014-05-29
         [Bug Fixes]
         - Bug Fix: scalar constants can have blessed values.

         [Documentation]
         - Fixed typos in POD and Changes file.

	 - Fixed formatting of Changes file.

	 - Cleaned up details from README using Pod::Readme.

         [Other Changes]
         - Updated MANIFEST.SKIP.

         - Perltidied source code.

	 - Added QA tests to the git repo.

         - Removed unnecessary dependency from Makefile.PL.

v0.1.2   2014-02-24

         - Import dies if given the tag "all", since it's reserved.

         - Various documentation improvements.

         - Code cleanup.

v0.1.1   2014-02-23

         - Added missing Changes and MANIFEST.SKIP files.

         - Added additional modules to SEE ALSO section.

         - Updated README.

v0.1.0   2014-02-23

         - First public release of Const::Exporter.